--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -37,12 +37,24 @@ $serif: "Calendas Plus","Crimson Text", "Hoefler Text", "Georgia", serif;
 
 /** * 12 & 16 as roots then powers of two. */
 
+/*
 $fs1:64px;
 $fs2:48px;
 $fs3:32px;
 $fs4:24px;
 
 $fsp:22px;
+
+$fs5:16px;
+$fs6:12px;
+*/
+
+$fs1:48px;
+$fs2:32px;
+$fs3:28px;
+$fs4:24px;
+
+$fsp:20px;
 
 $fs5:16px;
 $fs6:12px;
