--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
   <div class="featured-image" style="background-image: url({{ site.baseurl }}/images/{{ page.image.feature }})"></div>
 {% else %}
   <div class="overlay"></div>
-  <div class="featured-image" style="background-image: url({{ site.baseurl }}/images/typewriter.jpg)"></div>
+  <div class="featured-image" style="background-image: url({{ site.baseurl }}/images/violinMusic.jpg)"></div>
 {% endif %}
 
 
