--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -62,6 +62,24 @@ blockquote, blockquote p {
 	font-size: $fsp;
 }
 
+/* Tables */
+
+table {
+	margin: 0 auto $fsp*2 auto;
+}
+
+thead {
+	font-size: $fsp;
+	font-variant: small-caps;
+	border-bottom: 1px solid $black;
+	text-align: center;
+	padding: 0.2em 0.2em 0.2em 0.2em;
+}
+
+td, th {
+	font-size: $fsp;
+	padding: 0.2em 0.4em 0.2em 0.4em;
+}
 
 /*   Code Formatting    */
 
