--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -66,6 +66,13 @@ blockquote, blockquote p {
 	font-size: $fsp;
 }
 
+iframe.spotify {
+	margin: 0 auto $fsp*2 auto;
+	width: 300px;
+	height: 80px;
+	}
+
+
 /* Tables */
 
 table {
