--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -183,6 +183,11 @@ footer {
   bottom:50px;
 }
 
+.center-frame {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 @media print, screen and (max-width: 960px) {
   
   div.wrapper {
