--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -71,6 +71,11 @@ iframe {
 	margin: 0 auto 0 auto;
 }
 
+.caption {
+	display: block;
+	margin: 0 auto 0 auto;
+}
+
 .trinket {
 	padding: 0 auto $fsp*2 auto;
 }
