--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
 <!-- Type -->
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700,700italic" rel='stylesheet' type='text/css' />
 <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/entypo.css" media="all">
+<link rel="stylesheet" href="url(//assets/css/entypo.css)" media="all">
 
 <!-- In order to use Calendas Plus, you must first purchase it. Then, create a font-face package using FontSquirrel.
 <link rel='stylesheet' href='{{ site.baseurl }}/assets/cal.css' media='all' />
@@ -32,7 +32,7 @@
 
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/i.css">
+<link rel="stylesheet" href="url(//assets/css/i.css)">
 
 <!-- Fresh Squeezed jQuery -->
 
@@ -61,7 +61,7 @@
             <li>
               <a href="{{ site.baseurl }}/" title="{{ site.title }}">Home</a>
             </li>
-            
+
             {% for link in site.links %}
                 <li><a href="{% if link.external %}{{ link.url }}{% else %}{{ site.baseurl }}{{ link.url }}{% endif %}" {% if link.external %}target="_blank"{% endif %}>{{ link.title }}</a></li>
             {% endfor %}
