--- a/_includes/head-dark.html
+++ b/_includes/head-dark.html
@@ -21,7 +21,7 @@
 <!-- Type -->
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700,700italic" rel='stylesheet' type='text/css' />
 <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="//assets/css/entypo.css" media="all">
+<link rel="stylesheet" href="url(//assets/css/entypo.css)" media="all">
 
 <!-- In order to use Calendas Plus, you must first purchase it. Then, create a font-face package using FontSquirrel.
 <link rel='stylesheet' href='{{ site.baseurl }}/assets/cal.css' media='all' />
