--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@
 
 {% if page.image.feature %}
   <div class="overlay"></div>
-  <div class="featured-image" style="background-image: url(//images/{{ page.image.feature }})"></div>
+  <div class="featured-image" style="background-image: url({{ site.baseurl }}/images/{{ page.image.feature }})"></div>
 {% else %}
   <div class="overlay"></div>
-  <div class="featured-image" style="background-image: url(//images/gramophone.jpg)"></div>
+  <div class="featured-image" style="background-image: url({{ site.baseurl }}/images/gramophone.jpg)"></div>
 {% endif %}
 
 
@@ -38,7 +38,7 @@
                 dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
                 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
             })();
-        </script>
+        </script>	
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
       </aside>
